--- a/app/views/user/course_stat/_xtmpl_common_check.html.erb
+++ b/app/views/user/course_stat/_xtmpl_common_check.html.erb
@@ -1,11 +1,9 @@
 <script type="text/x-tmpl" id="common_check">
 {% var result=commonCheck(o); %}
-<h4>
-※外語學分目前不會計算第二外語以及進修英文(因為無法得知是否通過中高級初試)，目前需請同學自行計算!
-</h4>
+
 <table class="table table-bordered "style="border:0px">
 	<tr class="">
-		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">服務學習</h4></td>
+		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><p class="text-center">服務學習</p></td>
 		<td class="col-md-" colspan="3"><p class="text-center no-margin-bottom">一</p></td>
 		<td class="col-md-" colspan="3"><p class="text-center no-margin-bottom">二</p></td>
 	</tr>
@@ -26,7 +24,7 @@
 		</td>
 	</tr>
 	<tr class="">
-		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">藝文賞析</h4></td>
+		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><p class="text-center">藝文賞析</p></td>
 		<td class="col-md-" colspan="3"><p class="text-center no-margin-bottom">上</p></td>
 		<td class="col-md-" colspan="3"><p class="text-center no-margin-bottom">下</p></td>
 	</tr>
@@ -47,7 +45,7 @@
 		</td>
 	</tr>
 	<tr class="">
-		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><h4 class="text-center">體育</h4></td>
+		<td rowspan="2" class="col-md-2" style="vertical-align:middle"><p class="text-center">體育</p></td>
 		<td class="col-md-"><p class="text-center no-margin-bottom">大一</p></td>
 		<td class="col-md-"><p class="text-center no-margin-bottom">大一</p></td>
 		<td class="col-md-"><p class="text-center no-margin-bottom">選修</p></td>
@@ -79,7 +77,7 @@
 	</tr>
 	<tr class="">
 		<td class="col-md-2" >
-			<h4 class="text-center ">外文</h4>
+			<p class="text-center ">外文</p>
 		</td>
 		<td colspan="6">
 			<div class="progress no-margin-bottom">
@@ -94,11 +92,11 @@
 	</tr>
 	<tr class="">
 		<td rowspan="3" style="vertical-align:middle">
-			<h4 class="text-center no-margin-bottom" style="line-">通識</h4>
+			<p class="text-center no-margin-bottom" style="line-">通識</p>
 		</td>
 		{% var common_basic_credit=0; %}
 		{% for(var dimension in result['common']){ %}
-			<td class="{%=dimension_class(dimension)%}">
+			<td class="">
 				<p class="text-center no-margin-bottom">
 					{% if(dimension=="通識"){ %}
 						當代
@@ -136,4 +134,8 @@
 		</td>
 	</tr>
 </table>
+<p>
+※外語學分目前不會計算第二外語以及進修英文(因為無法得知是否通過中高級初試)<br>
+目前需請同學自行計算!
+</p>
 </script>
