Basic layout of event show

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -72,7 +72,7 @@
 }
 
 .form-text-wrapper{
-	@extend .col-md-8, .col-sm-6, .col-xs-12;
+	@extend .col-md-8, .col-sm-8, .col-xs-12;
 	padding: 3px auto;
 }
 
@@ -92,11 +92,11 @@
 }
 
 #event-block1{
-	background-image: url(<%=asset_path("events/bg_symphony.png")%>);
+	background-image: url(<%=asset_path("events/bg-geometry.png")%>);
 }
 
 #event-block2{
-	background-image: url(<%=asset_path("events/bg_waves.png")%>);
+	background-image: url(<%=asset_path("events/bg_symphony.png")%>);
 }
 
 .events--theme{
