--- a/app/views/books/_index_book_grid.html.erb
+++ b/app/views/books/_index_book_grid.html.erb
@@ -1,8 +1,8 @@
 <div id="book-<%=sale_book.id%>" href="/books/<%=sale_book.id%>" class="thumbnail clickable-hover" style="height:293px; " onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')" onclick="goToHref($(this).attr('href'),true);">					
 	<div id="control-bar" style="width:100%;position: absolute;" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
 		<% if sale_book.user==current_user && sale_book.status==0%>
-			<%=link_to fa_icon("pencil"), edit_book_path(sale_book),class:"btn btn-sm btn-info" %>
-			<%=button_tag fa_icon("check"), class:"btn btn-sm btn-info",onclick:"setBookSaled(#{sale_book.id});" %>
+			<%=link_to fa_icon("pencil"), edit_book_path(sale_book),class:"btn btn-sm btn-warning" %>
+			<%=button_tag fa_icon("check"), class:"btn btn-sm btn-success",onclick:"setBookSaled(#{sale_book.id});", title:"設成已賣出" %>
 		<% end %>
 	</div>
 	<%=sale_book.cover_image%>
