--- a/app/assets/stylesheets/events_show.css.scss
+++ b/app/assets/stylesheets/events_show.css.scss
@@ -10,34 +10,32 @@
 	width: auto ;  
 }
 
-.layout-content{
-	@extend .container;
-}
-
 /*------------------------
 	Main Column
 ------------------------*/
 
 .nav-menu-wrapper{
-	@extend .col-md-3;
+	//bottom: 50px;
+	background-color: rgba(255, 255, 255, 0.7);
 }
 
 .nav-menu{
-	width: 200px;
-	margin: 10px 5px;
-	border: 2px solid #d1d1e0;
-	padding: 20px 10px;
-	background-color: rgba(255, 255, 255, 1);
+	@extend .col-xs-12, .col-sm-6, .col-md-4;
+	//margin: 10px 5px;
+	//border: 2px solid #d1d1e0;
+	//padding: 20px 10px;
 }
 
-.nav-button-wrapper{
+.nav-button{
 	margin: 5px auto;
 }
 
-#editor-nav > b {
-	text-align: center;
-	font-size: medium;
-	margin: 0 auto;
+#editor-nav{
+	background-color: rgba(255, 255, 255, 1);
+}
+
+#my-nav{
+	//@extend .col-xs-offset-0, .col-sm-offset-0, .col-md-offset-4;
 }
 
 #my-nav > a {
@@ -56,7 +54,8 @@
 
 .main-column-wrapper{
 	//@extend .col-md-offset-3;
-	@extend .col-md-9;
+	@extend .col-md-12;
+	top: 40px;
 }
 
 .main-column{
