hide the 'preview' button in form.

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -103,7 +103,7 @@
 				</div>
 				<br>
 				<div class="col-md-12 text-right">
-					<button id="preview-btn" onclick="preview();return false;" class="btn btn-lg btn-primary">預覽</button>
+					<!--button id="preview-btn" onclick="preview();return false;" class="btn btn-lg btn-primary">預覽</button-->
 					<%=f.submit "送出",class:"btn btn-lg btn-success"%>
 				</div>
 			<% end %>
@@ -132,12 +132,12 @@
 			可以直接複製貼上FB的文章(記得設成公開)，會有圖片顯示喔!
 		</p>
 	</li>
-	<li data-id="preview-btn" data-button="Done">
+	<!--li data-id="preview-btn" data-button="Done">
 		<h4>預覽</h4>
 		<p>
 			送出前可以先看看效果如何!
 		</p>
-	</li>
+	</li-->
 </ol>
 
 <script>
