--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,13 +15,24 @@
 			<div class="main-column-content">
 				<!-- Info of Address -->
 				<address class="main-column-info row">
-					<div class="col-xs-9 col-md-10">
+					<!--<div class="col-xs-9 col-md-10">
 						<p><%=fa_icon "calendar"%> 時間: <%=@event.begin_time%>~<%=@event.end_time%></p>
 						<p><%=fa_icon "cubes"%> 主辦單位: <%=@event.organization%></p>
+					</div>-->
+					<div class="col-xs-12 col-md-12">
+						<p><%=fa_icon "calendar"%> 時間: <%=@event.begin_time%>~<%=@event.end_time%></p>
 					</div>
-					<div class="col-xs-3 col-md-2">
+					<div class="col-xs-12 col-md-12">
+						<p><%=fa_icon "cubes"%> 主辦單位: <%=@event.organization%></p>
+					</div>
+					<div class="col-xs-12 col-md-12">
 						<p><%=fa_icon "location-arrow"%> 地點: <%=@event.location%></p>
 					</div>
+				<% if @event.url.present? %>
+					<div class="col-xs-12 col-md-12">
+						<h4><%=fa_icon "share-alt"%><%=link_to "活動網址",@event.url,target:"blank"%></h4>
+					</div>
+				<% end %>
 				</address>
 				<!-- Info of Address End -->
 				
@@ -43,23 +54,19 @@
 	<div class="nav-menu-wrapper navbar-fixed-bottom">
 		<div class="container">
 			<!-- Editor Nav -->
-			<!--% if current_user %-->
-			<!--% @events.each do |event| %-->
-				<!--% if event.where(:user_id==current_user.try(:id))%-->
+				<% if current_user&& @event.user_id==current_user.try(:id)%>
 					<div id="editor-nav" class="nav-menu">
 						<b>主辦選單 </b>
-						<button id="edit_button" class="btn btn-info nav-button" onclick="edit(<%=params[:id]%>);" style="width:30%">編輯</button>
-						<button id="edit_button" class="btn btn-danger nav-button" onclick="edit(<%=params[:id]%>);" style="width:30%">刪除</button>
+						<%=link_to "編輯",edit_event_path(@event),class:"btn btn-info nav-button",style:"width:30%;","data-no-turbolink"=>true%>	
+						<%=link_to "刪除",@event,class:"btn btn-danger nav-button",style:"width:30%;",method:"delete", data: { confirm: '確定要刪除此活動嗎?' }%>
 					</div>
-				<!--% end %-->
-			<!--% end %-->
-			<!--% end %-->
+				<% end %>
 			<!-- Editor Nav End -->
 			
 			<!-- Normal Nav -->
 			<div id="my-nav" class="nav-menu pull-right" >
 				<% if current_user %>
-					<div class="dropdown"><!-- dropdown menu -->
+					<div class="dropdown hidden"><!-- dropdown menu -->
 						<button id="event-dropdown-menu" class="btn btn-default dropdown-toggle nav-button" type="button" data-toggle="dropdown" aria-expanded="true" style="width:40%">
 							已參加活動
 							<spen class="caret"></span>
