try to fix calendar UI error2

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "jquery-ui";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bg-color";
@@ -8,7 +9,7 @@
 @import "course_maps";
 @import "discuss";
 @import "dropdown";
-//@import "events";
+
 @import "header";
 @import "joyride-2.1";
 
