--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
 		<div class="main-column">
 		
 			<div class="image-wrapper">
-				<%=image_tag @event.cover.url, width:"100%" %>
+				<%=image_tag @event.cover.url, width:"100%",height:"400px" %>
 			</div>
 			<span class="event-title">[<%=@event.event_type%>] <%=@event.title%></span>
 			
