--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -110,7 +110,7 @@
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
-				<div class="service-box clickable-hover function-box" href="/user/collections/">
+				<div class="service-box clickable-hover function-box" href="/events">
 					<%=image_tag "5-1.png",class:"width-200"%>
 					<h3><strong>活動BAR！</strong></h3>
 					<h5 class="highlight-new-function"><strong>NCTU+ 新功能!</strong></h5>
