modify intro of index page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -104,7 +104,7 @@
 					</div>
 					-->
 					<div class="form-nav-button-wrapper">
-						<button id="myActivities" type="button" class="btn btn-success btn-block" data-toggle="toggle" aria-pressed="false" >已參加活動</button>
+						<button id="myActivities" type="button" class="btn btn-success btn-block" data-toggle="toggle" aria-pressed="false" >我的活動</button>
 					</div>
 					<!--
 					<div class="form-text-wrapper">
