--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -84,7 +84,7 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box clickable-hover function-box" href="/discusses">					
-						<%=image_tag "1.png",class:"width-200"%>
+						<%=image_tag asset_path("new-index/discuss-intro.png"),class:"width-200"%>
 						<h3>全校課程心得</h3>
 						<p class="text-muted" style="width:80%;margin:auto;">
 						選課前的好幫手，包羅歷年交大所有課程心得，舊文新文一次找齊，也包含課堂評價與歷屆成績，也歡迎同學一起討論。
@@ -93,7 +93,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box clickable-hover function-box" href="/books">
-					<%=image_tag "6-1.png",class:"width-200"%>
+					<%=image_tag asset_path("new-index/book-intro.png"),class:"width-200"%>
 					<h3>二手書拍賣</h3>
 					
 					<p class="text-muted" style="width:80%;margin:auto;">
@@ -103,7 +103,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box clickable-hover function-box" href="/user">
-					<%=image_tag "3.png",class:"width-200"%>
+					<%=image_tag asset_path("new-index/score-stat-intro.png"),class:"width-200"%>
 					<h3>畢業學分計算</h3>
 					
 					<p class="text-muted">今年可以畢業嗎？令人苦惱的畢業學分計算一次完成，把握大學最後的時間！</p>
@@ -111,7 +111,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center gray-hover">
 				<div class="service-box clickable-hover function-box" href="/events">
-					<%=image_tag "5-1.png",class:"width-200"%>
+					<%=image_tag asset_path("new-index/event-intro.png"),class:"width-200"%>
 					<h3><strong>活動BAR！</strong></h3>
 					<h5 class="highlight-new-function"><strong>NCTU+ 新功能!</strong></h5>
 					<p class="text-muted">學校最近有什麼新活動？<br>快來加入活動！建立屬於自己的活動BAR!</p>
