Add media query for show page (Events).

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -143,7 +143,8 @@
 
 .event-block__theme--today{
 	//border:2px solid #f8d4d4;
-	background: rgba(255, 255, 255, 0.4);
+	//background: rgba(255, 249, 171, 0.4);
+	background: rgba(255, 255, 255, 0.7);
 	border:0px solid #f8d4d4;
 }
 
