--- a/app/assets/stylesheets/events_show.css.scss
+++ b/app/assets/stylesheets/events_show.css.scss
@@ -7,8 +7,21 @@
 
 .show-font-image {
 	height: auto;
-	width: auto ;  
+	width: auto;  
 }
+
+@media screen and (min-width: 768px){
+	.banner_image{
+		height: 400px;
+	}
+}
+
+@media screen and (max-width: 768px){ 
+	.banner_image{
+		height: 200px;
+	}
+}
+
 
 /*------------------------
 	Main Column
