--- a/app/assets/stylesheets/events_show.css.scss
+++ b/app/assets/stylesheets/events_show.css.scss
@@ -12,13 +12,15 @@
 
 @media screen and (min-width: 768px){
 	.banner_image{
-		height: 400px;
+		max-height: 400px;
+		min-height: 400px;
 	}
 }
 
 @media screen and (max-width: 768px){ 
 	.banner_image{
-		height: 200px;
+		max-height: 200px;
+		min-height: 200px;
 	}
 }
 
